static analysis fixes.